test/error/ast_files/variable_def.st
x := int.
y := x.

(* not defined 'a_var'*)
z := a_var.
a_var := y.

(* not defined 'b_var' also *)
z := b_var.
